k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ping-pong-pod
  template:
    metadata:
      labels:
        app: ping-pong-pod
    spec:
      containers:
        - image: ping-pong:1.0
          name: ping-pong-container
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "256M"
              cpu: "100m"
