k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: ping-pong-pod
